...
//               ),
//             ),
//             SizedBox(height: 10),
//             Padding(
//               padding: const EdgeInsets.symmetric(horizontal: 20.0),
//               child: GestureDetector(
//                 key: ValueKey('loginButton'), // Added key
//                 onTap: () async {
//                   await authNotifier.login(
//                     emailController.text.trim(),
//                     passwordController.text.trim(),
//                   );
//                 },
...
